use Button instead of Link, fix tab traversal issues, try to limit height of children with overflow (kinda iffy at the moment...)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -154,6 +154,14 @@ h6 {
   background-size: contain;
 }
 
+.panel-item {
+  @apply w-full
+}
+
+.panel-item > span {
+  @apply w-full flex justify-between
+}
+
 ol {
     list-style-type: decimal;
     list-style-position: inside;
